--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --trace-deprecation index.js"
+    "start": "nodemon index.js"
   },
   "license": "ISC",
   "dependencies": {
